--- a/examples/md-flexible/input/AllOptions.yaml
+++ b/examples/md-flexible/input/AllOptions.yaml
@@ -1,12 +1,13 @@
-container                        :  [DirectSum, LinkedCells, VerletLists, VerletListsCells, VerletClusterLists, VarVerletListsAsBuild, VerletClusterCells]
-verlet-rebuild-frequency         :  1
+container                        :  [DirectSum, LinkedCells, LinkedCellsReferences, VarVerletListsAsBuild, VerletClusterCells, VerletClusterLists, VerletLists, VerletListsCells, PairwiseVerletLists]
+verlet-rebuild-frequency         :  20
 verlet-skin-radius               :  0.2
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
 data-layout                      :  [AoS, SoA]
-traversal                        :  [ds_sequential, lc_sliced, lc_sliced_balanced, lc_c01, lc_c01_combined_SoA, lc_c01_cuda, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcc_cluster_iteration_cuda, vcl_cluster_iteration, vcl_c06, vcl_c01_balanced, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vvl_as_built]
+traversal                        :  [ds_sequential, lc_sliced, lc_sliced_balanced, lc_sliced_c02, lc_c01, lc_c01_combined_SoA, lc_c01_cuda, lc_c04, lc_c04_HCP, lc_c04_combined_SoA, lc_c08, lc_c18, vcc_cluster_iteration_cuda, vcl_cluster_iteration, vcl_c06, vcl_c01_balanced, vcl_sliced, vcl_sliced_balanced, vcl_sliced_c02, vl_list_iteration, vlc_c01, vlc_c18, vlc_sliced, vlc_sliced_balanced, vlc_sliced_c02, vvl_as_built, vlp_c01, vlp_c18, vlp_sliced, vlp_sliced_balanced, vlp_sliced_c02]
 tuning-strategy                  :  full-Search
-tuning-interval                  :  100
+mpi-strategy                     :  no-mpi
+tuning-interval                  :  5000
 tuning-samples                   :  3
 tuning-max-evidence              :  10
 functor                          :  Lennard-Jones (12-6)
@@ -17,8 +18,7 @@ box-max                          :  [7.25, 7.25, 7.25]
 cell-size                        :  [1]
 deltaT                           :  0.001
 iterations                       :  10
-tuning-phases                    :  5
-periodic-boundaries              :  false
+periodic-boundaries              :  true
 Objects:                         
   CubeGrid:
     0:  
@@ -78,6 +78,10 @@ thermostat:
   deltaTemperature               :  0.1
   thermostatInterval             :  10
   addBrownianMotion              :  false
+log-level                        :  info
+no-flops                         :  false
+no-end-config                    :  false
+no-progress-bar                  :  false
 vtk-filename                     :  AllOptionsSim
 vtk-write-frequency              :  1
 #checkpoint : AllOptionsSim_10.vtk
