--- a/examples/md-flexible/input/inhomogeneousScenarios/inhomogeneous_rank_5.yaml
+++ b/examples/md-flexible/input/inhomogeneousScenarios/inhomogeneous_rank_5.yaml
@@ -1,31 +1,39 @@
 verlet-rebuild-frequency         :  10
 verlet-skin-radius               :  0.2
 verlet-cluster-size              :  4
-selector-strategy                :  Fastest-Absolute-Value
-mpi-strategy                     :  divide-and-conquer
+selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  full-Search
-tuning-interval                  :  1000
+tuning-interval                  :  2000
 tuning-samples                   :  10
 tuning-max-evidence              :  10
-functor                          :  Lennard-Jones (12-6)
+functor                          :  Lennard-Jones AVX (12-6)
 cutoff                           :  3
 box-min                          :  [0, 0, 0]
-box-max                          :  [15, 60, 15]
+box-max                          :  [20, 100, 20]
 cell-size                        :  [1]
-deltaT                           :  0.001
-iterations                       :  20000
+deltaT                           :  0.0005
+iterations                       :  50000
 periodic-boundaries              :  true
 Objects:
   CubeClosestPacked:
     0:
-      box-length                 :  [15, 6, 15]
-      bottomLeftCorner           :  [0, 27, 0]
+      box-length                 :  [16, 6, 16]
+      bottomLeftCorner           :  [2, 24, 2]
       particle-spacing           :  1.
       velocity                   :  [0, 0, 0]
       particle-type              :  0
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  2
+    1:
+      box-length                 :  [16, 6, 16]
+      bottomLeftCorner           :  [2, 76, 2]
+      particle-spacing           :  1.
+      velocity                   :  [0, 0, 0]
+      particle-type              :  1
+      particle-epsilon           :  1
+      particle-sigma             :  1
+      particle-mass              :  0.5
 log-level                        :  debug
 no-flops                         :  false
 no-end-config                    :  true
