--- a/examples/md-flexible/input/inhomogeneousScenarios/inhomogeneous_rank_5.yaml
+++ b/examples/md-flexible/input/inhomogeneousScenarios/inhomogeneous_rank_5.yaml
@@ -15,25 +15,25 @@ deltaT                           :  0.0001
 iterations                       :  1000000
 periodic-boundaries              :  true
 Objects:
-  CubeClosestPacked:
+  CubeGrid:
     0:
-      box-length                 :  [16, 6, 16]
-      bottomLeftCorner           :  [2, 24, 2]
-      particle-spacing           :  1.
-      velocity                   :  [0, 0, 0]
       particle-type              :  0
-      particle-epsilon           :  1
-      particle-sigma             :  1
-      particle-mass              :  2
-    1:
-      box-length                 :  [16, 6, 16]
-      bottomLeftCorner           :  [2, 76, 2]
-      particle-spacing           :  1.
-      velocity                   :  [0, 0, 0]
-      particle-type              :  1
-      particle-epsilon           :  1
-      particle-sigma             :  1
+      particle-epsilon           :  1.
+      particle-sigma             :  1.
       particle-mass              :  0.5
+      particles-per-dimension    :  [ 36,30,36 ]
+      particle-spacing           :  0.5
+      velocity                   :  [ 0.,0.,0. ]
+      bottomLeftCorner           :  [2, 20, 2]
+    1:
+      particle-type              :  1
+      particle-epsilon           :  1.
+      particle-sigma             :  1.
+      particle-mass              :  2.
+      particles-per-dimension    :  [ 6,15,6 ]
+      particle-spacing           :  3
+      velocity                   :  [ 0.,0.,0. ]
+      bottomLeftCorner           :  [2, 50, 2]
 log-level                        :  debug
 no-flops                         :  false
 no-end-config                    :  true
