--- a/examples/md-flexible/input/inhomogeneousScenarios/inhomogeneous_rank_3.yaml
+++ b/examples/md-flexible/input/inhomogeneousScenarios/inhomogeneous_rank_3.yaml
@@ -3,7 +3,7 @@ verlet-skin-radius               :  0.2
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Mean-Value
 tuning-strategy                  :  full-Search
-tuning-interval                  :  10000
+tuning-interval                  :  5000
 tuning-samples                   :  10
 tuning-max-evidence              :  10
 functor                          :  Lennard-Jones AVX (12-6)
@@ -11,8 +11,8 @@ cutoff                           :  3
 box-min                          :  [0, 0, 0]
 box-max                          :  [60, 15, 15]
 cell-size                        :  [1]
-deltaT                           :  0.0001
-iterations                       :  1000000
+deltaT                           :  0.0005
+iterations                       :  100000
 periodic-boundaries              :  true
 Objects:
   CubeClosestPacked:
