--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,55 +1,53 @@
-# This is a basic workflow to help you get started with Actions
-
+# Workflow for generating, checking, and deploying our doxygen documentation.
 name: doxygen
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run.
 on:
   push:
+    # pushes to master
     branches: [ master ]
   pull_request:
+    # PRs to master
     branches: [ master ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    container:
+      image: autopas/autopas-build-doxygen
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Create Doxygen target via cmake
+        run: mkdir build-doxygen && cd $_ && cmake -DAUTOPAS_BUILD_TARGET_DOC=ON ..
 
-      - name: Run Cmake (needed to get configured Doxyfiles)
-        uses: docker://autopas/autopas-build-doxygen
-        with:
-          entrypoint: cmake
-          args: -B ./build-doxygen -S ./
+      - name: Build documentation
+        # Run make to build the doc. Pipe stderr through a subprocess which saves it to warnings.out.
+        # Doxygen seems to have stopped throwing warnings from our readme files.
+        # If this reappears introduce a `grep -v` filter in the subprocess before tee.
+        run: make doc_doxygen 2> >(tee warnings.out >&2)
+        working-directory: build-doxygen
 
-      - name: Generate Doxygen for AutoPas
-        uses: SteffenSeckler/doxygen-action@v2.2.0beta6
-        with:
-          # Path to Doxyfile
-          doxyfile-path: "./Doxyfile" # default is ./Doxyfile
-          # Working directory
-          working-directory: "./build-doxygen/" # default is .
-          # enable fail-on-warnings
-          fail-on-warnings: true
-          # filter warnings from Readme file
-          warnings-filter: "README.md"
+      - name: Print warnings
+        # Print all warnings collected previously. Exit code depends on number of warnings.
+        run: cat warnings.out && exit $(wc -l warnings.out | cut -d' ' -f1)
+        working-directory: build-doxygen
 
-      - name: Deploy AutoPas doxygen documentation (only on master)
-        uses: peaceiris/actions-gh-pages@v3.7.2
-        if: github.ref == 'refs/heads/master'
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./build-doxygen/doc_doxygen/html/
-          destination_dir: doxygen_documentation/git-master/
-          publish_branch: main
-          external_repository: AutoPas/AutoPas.github.io
-          user_name: github-actions[bot]
-          user_email: github-actions[bot]@users.noreply.github.com
+#  publish:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+
+#      - name: Deploy AutoPas doxygen documentation (only on master)
+#        uses: peaceiris/actions-gh-pages@v3.7.2
+#        if: github.ref == 'refs/heads/master'
+#        with:
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+#          publish_dir: ./build-doxygen/doc_doxygen/html/
+#          destination_dir: doxygen_documentation/git-master/
+#          publish_branch: main
+#          external_repository: AutoPas/AutoPas.github.io
+#          user_name: github-actions[bot]
+#          user_email: github-actions[bot]@users.noreply.github.com
