--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Create Doxygen target via cmake
-        run: build-doxygen && cd build-doxygen && cmake -DAUTOPAS_BUILD_TARGET_DOC=ON ..
+        run: mkdir build-doxygen && cd build-doxygen && cmake -DAUTOPAS_BUILD_TARGET_DOC=ON ..
 
       - name: Build documentation
         # Run make to build the doc. Pipe stderr through a subprocess which saves it to warnings.out.
