--- a/examples/md-flexible/input/sameScenarioWithSmallDifferences/same_rank_6.yaml
+++ b/examples/md-flexible/input/sameScenarioWithSmallDifferences/same_rank_6.yaml
@@ -40,3 +40,4 @@ no-end-config                    :  true
 no-progress-bar                  :  false
 vtk-filename                     :  same
 vtk-write-frequency              :  100
+mpi-strategy                     :  divide-and-conquer
