--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -38,7 +38,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-
+      - run: pwd && ls
       - name: Deploy AutoPas doxygen documentation (only on master)
         uses: peaceiris/actions-gh-pages@v3.7.2
 #        if: github.ref == 'refs/heads/master'
