--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Deploy AutoPas doxygen documentation (only on master)
         uses: peaceiris/actions-gh-pages@v3.7.2
-#        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
