--- a/examples/md-flexible/input/sameScenarioWithSmallDifferences/same_rank_5.yaml
+++ b/examples/md-flexible/input/sameScenarioWithSmallDifferences/same_rank_5.yaml
@@ -38,6 +38,5 @@ log-level                        :  debug
 no-flops                         :  false
 no-end-config                    :  true
 no-progress-bar                  :  false
-vtk-filename                     :  same
-vtk-write-frequency              :  100
-mpi-strategy                     :  divide-and-conquer
+max-difference-for-bucket        :  0.2
+weight-for-max-density           :  0.1
