removes cuda from Doxyfile.in

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -13,9 +13,8 @@ FILE_PATTERNS          = *.h \
                          *.cpp \
                          *.cu \
                          *.md
-# The next line should be included, but produces too much warnings, so we don't include it yet.
-# This would enable documentation of the CUDA code.
-#EXTENSION_MAPPING      = h=c++ cpp=c++ cuh=c++ cu=c++
+# Add the next line if documentation of other files is needed (e.g. cuh, cu)!
+# EXTENSION_MAPPING      = h=c++ cpp=c++
 RECURSIVE              = YES
 USE_MDFILE_AS_MAINPAGE = @PROJECT_SOURCE_DIR@/@DOXY_MAIN_PAGE@
 HTML_HEADER            = @AUTOPAS_SOURCE_DIR@/docs/AutoPasHeader.html
@@ -31,7 +30,9 @@ EXTRACT_ANON_NSPACES    = YES # default NO
 # HIDE_UNDOC_CLASSES    = NO # default NO
 # HIDE_FRIEND_COMPOUNDS = NO # default NO
 # HIDE_IN_BODY_DOCS     = NO # default NO
-PREDEFINED              = AUTOPAS_CUDA
+
+# Add predefinitions if you want to define some macros (separated by space)
+# PREDEFINED              = SOME_DEFINITION
 
 JAVADOC_AUTOBRIEF      = YES # default NO
 QT_AUTOBRIEF           = YES # default NO
