A little more progress in fixing the communication

--- a/examples/md-flexible/CMakeLists.txt
+++ b/examples/md-flexible/CMakeLists.txt
@@ -22,6 +22,7 @@ if (AUTOPAS_INTERNODE_TUNING OR AUTOPAS_INCLUDE_MPI)
         message(STATUS "cxx mpi found: ${MPI_CXX_COMPILER}")
         set(MD_FLEXIBLE_USE_MPI ON)
         add_definitions(-DAUTOPAS_INTERNODE_TUNING)
+        add_definitions(-DAUTOPAS_INCLUDE_MPI)
     endif ()
 else ()
     message(STATUS "AUTOPAS_INTERNODE_TUNING not set, not linking MPI to md-flexible.")
