prefix all custom modules with `autopas_`

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Dependencies needed by the main library target
 include(autopas_spdlog)
-include(harmony)
+include(autopas_harmony)
 include(autopas_eigen)
 
 add_subdirectory(fake-dlclose)
