Fixed overlapping purpose of AUTOPAS_INTERNODE_TUNING and AUTOPAS_INCLUDE_MPI

--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -14,19 +14,19 @@ file(
 
 add_library(autopas STATIC ${MY_SRC})
 
-if (AUTOPAS_INTERNODE_TUNING OR AUTOPAS_INCLUDE_MPI)
-    message(STATUS "AUTOPAS_INTERNODE_TUNING set, searching for mpi to link against md-flexible ...")
+if (AUTOPAS_INCLUDE_MPI)
+    message(STATUS "AUTOPAS_INCLUDE_MPI set, searching for mpi to link against md-flexible ...")
     find_package(MPI)
 
     if (NOT ${MPI_CXX_FOUND})
-        message(FATAL_ERROR "cxx mpi could not be found, even though AUTOPAS_INTERNODE_TUNING was set.")
+        message(FATAL_ERROR "cxx mpi could not be found, even though AUTOPAS_INCLUDE_MPI was set.")
     else ()
         message(STATUS "cxx mpi found: ${MPI_CXX_COMPILER}")
         set(AUTOPAS_INCLUDE_MPI ON)
-        add_definitions(-DAUTOPAS_INTERNODE_TUNING)
+        add_definitions(-DAUTOPAS_INCLUDE_MPI)
     endif ()
 else ()
-    message(STATUS "AUTOPAS_INTERNODE_TUNING not set, not linking MPI to md-flexible.")
+    message(STATUS "AUTOPAS_INCLUDE_MPI not set, not linking MPI to md-flexible.")
 endif ()
 
 target_link_libraries(
@@ -49,7 +49,7 @@ target_compile_definitions(
     PUBLIC
     $<$<BOOL:${AUTOPAS_OPENMP}>:AUTOPAS_OPENMP>
     $<$<NOT:$<BOOL:${AUTOPAS_OPENMP}>>:EIGEN_DONT_PARALLELIZE>
-    $<$<BOOL:${AUTOPAS_INTERNODE_TUNING}>:AUTOPAS_INTERNODE_TUNING>
+    $<$<BOOL:${AUTOPAS_INCLUDE_MPI}>:AUTOPAS_INCLUDE_MPI>
     _USE_MATH_DEFINES
 )
 
