replace cmake_dependent_option with option_conditional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 project(AutoPas)
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/)
+
 
 # CMAKE policies, etc.
 cmake_policy(SET CMP0054 NEW)
@@ -13,14 +15,12 @@ cmake_policy(SET CMP0079 NEW)
 set(AUTOPAS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(AUTOPAS_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
-include(CMakeDependentOption)
+include(optionConditional)
 
 # Determine if AutoPas is built as the primary project or not.
-cmake_dependent_option(AUTOPAS_STANDALONE_BUILD
+option_conditional(AUTOPAS_STANDALONE_BUILD
         "Add options and targets which are only relevant for developers of AutoPas"
-        ON
         "AUTOPAS_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR"
-        OFF
 )
 
 # starting with cmake 3.17 this is set using target_compile_features.
@@ -62,11 +62,9 @@ enable_testing()
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/)
 
-cmake_dependent_option(AUTOPAS_FORMATTING_TARGETS
+option_conditional(AUTOPAS_FORMATTING_TARGETS
         "Adds targets for code formatting in AutoPas. Highly useful when developing AutoPas but might cause conflicts when only using it."
-        ON
         AUTOPAS_STANDALONE_BUILD
-        OFF
 )
 
 if(AUTOPAS_FORMATTING_TARGETS)
