Now sorting with cell index (instead of example value r[0]). Bug fixes and enhanced type consistency.

--- a/examples/md-flexible/CMakeLists.txt
+++ b/examples/md-flexible/CMakeLists.txt
@@ -20,7 +20,7 @@ endif (AUTOPAS_INTERNODE_TUNING)
 
 include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 
-add_executable(md-flexible ${MDFlex_SRC})
+add_executable(md-flexible ${MDFlex_SRC} ../../src/autopas/options/SortingAlgorithmOption.h ../../src/autopas/options/ProjectionSortingOption.h)
 
 target_include_directories(md-flexible PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
