Fixed spelling error

--- a/examples/md-flexible/input/inhomogeneous.yaml
+++ b/examples/md-flexible/input/inhomogeneous.yaml
@@ -98,7 +98,7 @@ Objects:
 #   deltaTemperature               :  0.1
 #   thermostatInterval             :  10
 #   addBrownianMotion              :  false
-vtk-filename                     :  fallingDrop
+vtk-filename                     :  inhomogeneous
 vtk-write-frequency              :  50
 no-flops                         :  false
 no-end-config                    :  true
