First step to use ANTLR instead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,8 @@ include(version.cmake)
 # libraries
 add_subdirectory(libs)
 
+include(antlr4cpp)
+
 # autopas
 add_subdirectory(src)
 # autopasTools
