Add ruleChecker executable
This small program is able to read log files from the TuningStrategyLoggerProxy and replay them for RuleBasedTuning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,9 @@ add_subdirectory(src)
 # autopasTools
 add_subdirectory(tools)
 
+# ruleChecker
+add_subdirectory(ruleChecker)
+
 # modules needing targets:
 include(coloring)
 include(logging)
