make kokkos available in autopas build

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -2,6 +2,7 @@
 include(autopas_spdlog)
 include(autopas_harmony)
 include(autopas_eigen)
+include(autopas_kokkos)
 
 add_subdirectory(fake-dlclose)
 
